<resources>
    <string name="app_name">生活百事通</string>
    <string name="title_activity_view_pager_model">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="username">您还没有登录</string>
    <string name="usergrade">请点击登录</string>
    <string name="my_seller">我是  卖家</string>
    <string name="my_order">我的订单</string>
    <string name="my_news">我的消息</string>
    <string name="my_platform">我的发布平台</string>
    <string name="my_publish">我要发布</string>
    <string name="my_mypublish">我的发布</string>
    <string name="my_shoppingcart">我的购物车</string>
    <string name="my_vermicelli">我的粉丝</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_follow">我的关注</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_setup">个人设置</string>
    <string name="my_stationmaster">申请当站长</string>
    <string name="my_back_hongpager">訪問官方主頁</string>
    <string name="my_edit_search">  商品/店铺</string>
    <string name="businesstime">营业时间:</string>
    <string name="basics">基本資料</string>

    <string name="shop_appraise">评价:</string>
    <string name="shop_add">地址:</string>
    <string name="shop_contactway">联系方式:</string>
    <string name="shop_Gohere">去这儿</string>
    <string name="shop_collect">收藏</string>
    <string name="shop_share">分享</string>


    <string name="productname">产品名称:</string>
    <string name="jianjei">简介:</string>
    <string name="danjia">单价:</string>
    <string name="favourable">好评:</string>
    <string name="difference">差评:</string>
    <string name="messageboard">留言:</string>


    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">上次刷新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在刷新…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>
    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>


    <!--我要发布-->
    <string name="Releasecommodity">发布商品</string>
    <string name="Publishingservice">发布服务</string>
    <string name="releasenews">发布新闻</string>
    <string name="Platformaccount">平台账号:</string>
    <string name="Accountlevel">等级:</string>
    <string name="Platformmanagement">平台管理:</string>
    <string name="radio_close">关闭</string>
    <string name="radio_open">开启</string>

    <string name="Rechargerenewals">充值续费:</string>
    <string name="Shareaccount">共享账号:</string>
    <string name="setup">设置</string>

    <string name="Platformname">平台名称:</string>
    <string name="Shopdisplay">店铺展示:</string>
    <string name="upload">上传</string>
    <string name="Businessaddress">经营地址:</string>
    <string name="community">社区:</string>
    <string name="servicecall">业务电话:</string>
    <string name="cellphone">手机:</string>
    <string name="telephone">座机:</string>
    <string name="Selectdirectory">选择目录:</string>
    <string name="paymentmethod">收款方式:</string>

    <string name="Delivery">货到付款</string>
    <string name="prepay">预付定金</string>
    <string name="Onlinepayment">在线支付</string>
    <string name="ShopName">商品名称:</string>

    <string name="model">规格型号:</string>
    <string name="unit_price">单 价(元):</string>
    <string name="chargeunit">计价单位:</string>
    <string name="recommend">推荐理由:</string>
    <string name="CommodityDescription">商品描述:</string>

    <string name="Uploadpictures">上传图片:</string>
    <string name="Releaserule">发布规则:</string>
    <string name="OK">我已阅读并同意:</string>
    <string name="btn_ok">发布</string>

    <!--登录-->
    <string name="userlogin">用户登录</string>
    <string name="usernumber">手机号码：</string>
    <string name="userpassword">密码：</string>
    <string name="login">登录</string>
    <string name="register">我要注册</string>
    <string name="forget_the_password">忘记密码</string>
    <string name="fastlogin">一键登录</string>
    <!--注册-->
    <string name="userregist">用户注册</string>
    <string name="phonenumber">输入手机号</string>
    <string name="password">输入6~12位字母或数字密码</string>
    <string name="repassword">再次输入密码</string>
    <string name="write_auth_code">填写验证码</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="end">完成</string>
    <string name="title_activity_oogle_maps_api">Map</string>

    <!-- JazzyViewPager -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <!-- JazzyViewPager -->

</resources>
