<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kb.mineactivity.ForgotPasswordActivity">
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@mipmap/qq">
        <ImageButton
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:src="@mipmap/wb_btn_off_normal"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="2.5"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="找回密码"/>
    <EditText
        android:id="@+id/edt_forget_name"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="10dp"
        android:hint="@string/phonenumber"/>
    <View
        android:layout_width="300dp"
        android:layout_centerInParent="true"
        android:layout_height="1dp"
        android:background="@color/canlendar_text_color"/>
    <EditText
        android:id="@+id/edt_forget_pass"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="10dp"
        android:hint="新密码"/>
    <View
        android:layout_width="300dp"
        android:layout_centerInParent="true"
        android:layout_height="1dp"
        android:background="@color/canlendar_text_color"/>
    <EditText
        android:id="@+id/edt_repass"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="10dp"
        android:hint="@string/repassword"/>
    <View
        android:layout_width="300dp"
        android:layout_centerInParent="true"
        android:layout_height="1dp"
        android:background="@color/canlendar_text_color"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edt_auth"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:background="@null"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="10dp"
            android:hint="@string/write_auth_code"/>
        <View
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/btn_send"
            android:background="@color/canlendar_text_color"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login_shape"
            android:layout_toRightOf="@+id/edt_auth"
            android:layout_marginLeft="20dp"
            android:text="@string/send_auth_code"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_login_shape"
        android:text="@string/end"
        android:textColor="#ffff"
        android:textSize="20sp"/>

        </LinearLayout>
</LinearLayout>
