<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context="com.kb.mineactivity.RegistActivity">


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@mipmap/qq">
        <ImageButton
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:src="@mipmap/wb_btn_off_normal"/>
    </RelativeLayout>
    <LinearLayout
    android:layout_weight="2.5"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/userlogin"/>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
            android:padding="10dp"
        android:background="@drawable/login_shape">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorBlack"
            android:text="@string/usernumber"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/line"/>

        <EditText
            android:id="@+id/edt_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorlFewnchgrey"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="10dp"
            android:hint="请输入手机号码"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_shape">
            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:textColor="@color/colorBlack"
                android:text="@string/userpassword"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/line"/>
            <EditText
                android:id="@+id/edt_login_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorlFewnchgrey"
                android:textSize="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="10dp"
                android:password="true"
                android:hint="请输入密码"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_login_shape"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/line"/>
            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/forget_the_password"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/line"/>
            <TextView
                android:id="@+id/txt_fast_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/fastlogin"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="第三方登录"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:id="@+id/img_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/weixin"/>
            <ImageView
                android:id="@+id/img_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/qqq"/>
            <ImageView
                android:id="@+id/img_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/sina"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
