<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kb.mineactivity.RegistActivity">
    <include
        android:id="@+id/regist_title"
        layout="@layout/titlebar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="@mipmap/qq">

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/userregist"/>
                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/phonenumber"/>
                <View
                    android:layout_width="300dp"
                    android:layout_centerInParent="true"
                    android:layout_height="1dp"
                    android:background="@color/canlendar_text_color"/>
                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:digits="1234567890abcdefghijklmnopqrstuvwxyz"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:maxLength="12"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:hint="@string/password"/>
                <View
                    android:layout_width="300dp"
                    android:layout_centerInParent="true"
                    android:layout_height="1dp"
                    android:background="@color/canlendar_text_color"/>
                <EditText
                    android:id="@+id/edt_repass"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:inputType="textPassword"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/repassword"/>
                <View
                    android:layout_width="300dp"
                    android:layout_centerInParent="true"
                    android:layout_height="1dp"
                    android:background="@color/canlendar_text_color"/>

                <TextView
                    android:id="@+id/txt_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    android:text="两次输入的密码不一致"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/edt_auth1"
                        android:layout_width="180dp"
                        android:layout_height="35dp"
                        android:background="@null"
                        android:textColor="@color/colorBlack"
                        android:inputType="number"
                        android:textSize="@dimen/activity_horizontal_margin"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/write_auth_code"/>
                    <View
                        android:layout_width="180dp"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/btn_send"
                        android:background="@color/canlendar_text_color"/>

                    <Button
                        android:id="@+id/btn_send"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_login_shape"
                        android:layout_toRightOf="@+id/edt_auth1"
                        android:layout_marginLeft="20dp"
                        android:text="@string/send_auth_code"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"/>
                </RelativeLayout>
                <TextView
                    android:id="@+id/txt_visiable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    android:text="两次输入的密码不一致"/>

                <Button
                    android:id="@+id/btn_regist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_login_shape"
                    android:text="@string/end"
                    android:textColor="#ffff"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="第三方賬號登录"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/weixin"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/qqq"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/sina"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
